fix: minor improvements in alignment

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -9,13 +9,14 @@
         margin-bottom: 6.25rem
         &__title
             font-size: 2.188rem
-            font-weight: 400
+            font-weight: 330
             font-family: Raleway
             margin-bottom: 1.25rem
         &__text
             width: 82.1%
             margin-bottom: 1.75rem
             font-family: "Open Sans"
+            font-weight: 350
             line-height: 1.438rem
             margin-left: 50%
             transform: translateX(-50%)
@@ -30,7 +31,7 @@
     &__image
         width: 100%
         height: 100%
-        transform: scale(2)
+        transform: scale(1.8) translate(2.5%, -7.5%)
 
 @media only screen and (min-width: 1000px)
     .header
