--- a/sass/main.sass
+++ b/sass/main.sass
@@ -69,7 +69,7 @@
     &__trumpet-container
         background-color: #55DFB4
         &__image
-            transform: translateY(15%)
+            transform: translate(-5%, 15%)
 
 @media only screen and (min-width: 1000px)
     .main
@@ -82,6 +82,7 @@
             padding-bottom: 5.688rem
             &--1
                 padding-right: 5%
+                padding-left: 3%
             &--2
                 padding-top: 1.812rem
                 padding-bottom: 0.5rem
@@ -89,6 +90,7 @@
                 width: 55%
                 padding-top: 4.375rem
                 padding-bottom: 4.375rem
+                padding-left: 3%
                 display: inline-block
                 margin-right: 5%
             &__text-container
