--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ body {
 }
 .header__cta__title {
   font-size: 2.188rem;
-  font-weight: 400;
+  font-weight: 330;
   font-family: Raleway;
   margin-bottom: 1.25rem;
 }
@@ -200,6 +200,7 @@ body {
   width: 82.1%;
   margin-bottom: 1.75rem;
   font-family: "Open Sans";
+  font-weight: 350;
   line-height: 1.438rem;
   margin-left: 50%;
   transform: translateX(-50%);
@@ -215,7 +216,7 @@ body {
 .header__image {
   width: 100%;
   height: 100%;
-  transform: scale(2);
+  transform: scale(1.8) translate(2.5%, -7.5%);
 }
 
 @media only screen and (min-width: 1000px) {
@@ -326,7 +327,7 @@ body {
   background-color: #55DFB4;
 }
 .main__trumpet-container__image {
-  transform: translateY(15%);
+  transform: translate(-5%, 15%);
 }
 
 @media only screen and (min-width: 1000px) {
@@ -342,6 +343,7 @@ body {
   }
   .main__item--1 {
     padding-right: 5%;
+    padding-left: 3%;
   }
   .main__item--2 {
     padding-top: 1.812rem;
@@ -351,6 +353,7 @@ body {
     width: 55%;
     padding-top: 4.375rem;
     padding-bottom: 4.375rem;
+    padding-left: 3%;
     display: inline-block;
     margin-right: 5%;
   }
@@ -587,7 +590,7 @@ body {
   font-weight: 700;
 }
 .pricing__tier-container__tier__left-side__price {
-  font-weight: 300;
+  font-weight: 100;
 }
 .pricing__tier-container__tier__left-side__price--1 {
   font-size: 2.875rem;
@@ -605,7 +608,7 @@ body {
   color: var(--oxy-green);
 }
 .pricing__tier-container__tier__left-side__limited {
-  font-weight: 700;
+  font-weight: 600;
   font-size: 0.75rem;
 }
 .pricing__tier-container__tier__list {
@@ -693,6 +696,15 @@ body {
   }
   .pricing__tier-container__tier__button--premium:hover {
     box-shadow: 0.312rem 0.625rem 1.688rem 0px rgba(85, 223, 180, 0.2901960784);
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .pricing {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+  .pricing__tier-container__tier {
+    width: 27%;
   }
 }
 .facts {
